# vizsup

./: .env.example  .gitignore  CLAUDE.md  README.md  run-desktop.ps1
.claude/: settings.json
.claude/agents/: pipeline-debugger.md  translation-reviewer.md
.claude/skills/add-provider/: SKILL.md
.claude/skills/run-stage/: SKILL.md
.claude/skills/ui-design-prompt/: SKILL.md
Dark Editor Design/: .thumbnail  Input & Setup.dc.html  Render & Export.dc.html  Settings.dc.html  Subtitle Editor v1.dc.html  Subtitle Editor.dc.html
backend/: pyproject.toml
backend/app/: __init__.py  cli.py  config.py  ffmpegutil.py  jobs.py  main.py  models.py
backend/app/pipeline/: __init__.py  asr.py  assemble.py  download.py  hardsub_detect.py  ocr.py  srt.py  translate.py  tts.py
backend/app/providers/: __init__.py  base.py  registry.py
backend/app/providers/asr/: __init__.py  faster_whisper.py  whisperx_funasr.py
backend/app/providers/translation/: __init__.py  _common.py  claude.py  deepl.py  deepseek.py  gemini.py  glm.py  openrouter.py  passthrough.py  qwen.py
backend/app/providers/tts/: __init__.py  azure.py  edge.py  fpt.py  google.py
desktop/: __init__.py  cuemodel.py  main.py  paths.py  settings_dialog.py  store.py  theme.py  worker.py
desktop/views/: __init__.py  editor_view.py  input_view.py  render_view.py
desktop/widgets/: __init__.py  flow_steps.py  provider_combo.py  style_panel.py  subtitle_table.py  timeline.py  video_panel.py
docs/: architecture.md  design-brief.md  feature-proposal.md  providers.md  redesign-prompt.md  redesign-step3-prompt.md  research.md  ui-design-prompt.md
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
frontend/src/components/: JobProgress.tsx  ProviderSelect.tsx  SubtitleTable.tsx  SubtitleTimeline.tsx
frontend/src/pages/: Editor.tsx  InputJob.tsx  Render.tsx
