[project]
name = "vizsup"
version = "0.1.0"
description = "Personal Chinese->Vietnamese video subtitle + dubbing tool"
requires-python = ">=3.11"

# Core deps for the Phase-1 cheap path (download -> edge-tts -> ffmpeg burn).
# Heavier ML deps (whisperx, funasr, paddleocr, demucs, torch) are optional
# extras so the smoke path installs fast and the editor can be built first.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "yt-dlp>=2025.1.1",
    "edge-tts>=6.1",
    "httpx>=0.27",
    "websockets>=12.0",
    "openai>=1.40",   # OpenAI-compatible providers: OpenRouter / DeepSeek / Qwen
]

[project.optional-dependencies]
# Default ASR (no-hardsub path): faster-whisper only — one package, CPU/GPU.
asr = [
    "faster-whisper>=1.0",
]
# Accuracy ASR: FunASR Paraformer-Large (CN-native) + torch (CPU works, GPU faster).
asr-accurate = [
    "funasr>=1.1",
    "torch>=2.2",
    "torchaudio>=2.2",
]
# Hardcoded-subtitle OCR (burned-in Chinese subs → SRT). RapidOCR = ONNX PP-OCR
# models, CPU, no PaddlePaddle — far easier to install on Windows. Pulls opencv.
ocr = [
    "rapidocr-onnxruntime>=1.3",
]
# LLM translation providers.
translate = [
    "anthropic>=0.40",
    "openai>=1.40",          # DeepSeek + Qwen are OpenAI-compatible endpoints
    "zhipuai>=2.1",          # GLM-5.2
    "google-genai>=0.3",     # Gemini
]
# Audio assembly extras.
audio = [
    "numpy>=1.26",
    "soundfile>=0.12",
    "demucs>=4.0",           # optional stem separation for ducking
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]
# desktop GUI (PySide6/Qt). The primary UI; install to run `python -m desktop.main`.
desktop = [
    "PySide6>=6.7",
]

[project.scripts]
vizsup = "app.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"
